--- a/applications/daophot/sun42.tex
+++ b/applications/daophot/sun42.tex
@@ -1,20 +1,18 @@
-\documentstyle[11pt]{article}
-\pagestyle{myheadings}
+\documentclass[11pt,nolof]{starlink}
+
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun42.5}
-\newcommand{\stardocnumber}    {42.5}
-\newcommand{\stardocauthors}   {Nicholas Eaton and Grant Privett}
-\newcommand{\stardocdate}      {6 December 1996}
-\newcommand{\stardoctitle}     {DAOPHOT
-
-Stellar Photometry Package}
-\newcommand{\stardocversion}   {Version 1.2}
-\newcommand{\stardocmanual}    {Introduction}
-\newcommand{\stardocabstract}  {
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun42.5}
+\stardocnumber      {42.5}
+\stardocauthors     {Nicholas Eaton and Grant Privett}
+\stardocdate        {6 December 1996}
+\stardoctitle     {DAOPHOT --- Stellar Photometry Package}
+\stardocversion     {Version 1.2}
+\stardocmanual      {Introduction}
+\stardocabstract  {
 DAOPHOT is a stellar photometry package designed by Peter Stetson at DAO to deal
 with crowded fields. The package performs various tasks including
 finding objects, aperture photometry, obtaining the point-spread function, and
@@ -25,226 +23,13 @@ iteratively, which improves the accuracy of the photometry.
 
 % -----------------------------------------------------------------------------
 
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-\newcommand{\STARLINKref}{\htmladdnormallink{Starlink}{http://www.starlink.ac.uk/}}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\latex}[1]{#1}
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-%  Redefine the \tableofcontents command. This procrastination is necessary
-%  to stop the automatic creation of a second table of contents page
-%  by latex2html.
-\newcommand{\latexonlytoc}[0]{\tableofcontents}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
+% ? Document specific \providecommand or \newenvironment commands.
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-   {\LARGE\bf \stardocversion \\ [4ex]}
-   {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\bf Abstract}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \newcommand{\latexonlytoc}[0]{}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{Abstract{\xlabel{abstract}}}
-
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
- \newpage
- \begin{latexonly}
-   \setlength{\parskip}{0mm}
-   \latexonlytoc
-   \setlength{\parskip}{\medskipamount}
-   \markright{\stardocname}
- \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\newpage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 \section{\xlabel{INTRODUCTION}Introduction}
 \label{sec:intro}
@@ -260,10 +45,10 @@ the previous version which is known as DAOPHOT Classic. The main changes concern
 the choice of the point-spread fitting function and the handling of under-sampled
 data. This version uses image data written in NDF, the Starlink N-Dimensional
 Data Format \xref{(SUN/33)}{sun33}{}, that contain a DATA\_ARRAY component
-and have an extension {\tt .sdf}.
+and have an extension \texttt{.sdf}.
 
 A document written by Peter Stetson (DAOPHOT: A computer program for crowded-field
-stellar photometry, Publ.astr.Soc.Pacific, {\bf 99}, 191-222, 1987)
+stellar photometry, Publ.astr.Soc.Pacific, \textbf{99}, 191-222, 1987)
 gives the background to the algorithms used by DAOPHOT. A user's manual (MUD/9)
 is also available through Starlink.
 
@@ -293,40 +78,40 @@ The algorithms should not be changed without permission.
 
 DAOPHOT is invoked by the simple command:
 
-\begin{verbatim}
-        % daophot
-\end{verbatim}
+\begin{terminalv}
+% daophot
+\end{terminalv}
 
 this should generate a response similar to:
 
-\begin{verbatim}
-        DAOPHOT applications are now available -- (Version 1.2)
-\end{verbatim}
+\begin{terminalv}
+DAOPHOT applications are now available -- (Version 1.2)
+\end{terminalv}
 
-Subsequent use of {\tt daophot} will place you inside the DAOPHOT executable image,
+Subsequent use of \texttt{daophot} will place you inside the DAOPHOT executable image,
 which you can leave with the command:
 
-\begin{verbatim}
-        Command: EXIT
-\end{verbatim}
+\begin{terminalv}
+Command: EXIT
+\end{terminalv}
 
 Inside the executable image you can identify the data to be analysed by DAOPHOT
 using the command:
 
-\begin{verbatim}
-        Command: ATTACH <filename>
-\end{verbatim}
+\begin{terminalv}
+Command: ATTACH <filename>
+\end{terminalv}
 
 The file has to be in the NDF format of the Starlink Standard Data Structures
-\xref{(SUN/33)}{sun33}{}. The default file extension is {\tt .sdf}.
+\xref{(SUN/33)}{sun33}{}. The default file extension is \texttt{.sdf}.
 
 At present DAOPHOT can only handle NDF files that have the DATA\_ARRAY structure at
 the top level. If the program fails to find the data structure in the container
 file, then the message:
 
-\begin{verbatim}
-        Failed to attach <filename>
-\end{verbatim}
+\begin{terminalv}
+Failed to attach <filename>
+\end{terminalv}
 
 will be displayed. If you do not expect this message, then this is the moment to
 seek help from your system manager. If you do not get this message, then you can
@@ -336,7 +121,7 @@ The complete set of DAOPHOT commands can be found in the user's manual (MUD/9).
 
 There are three options files which are used by DAOPHOT at various stages of the
 reduction. There are examples of these in the directory specified by the
-DAOPHOT\_DIR environmental variable. The file {\tt daophot.opt} is used when the
+DAOPHOT\_DIR environmental variable. The file \texttt{daophot.opt} is used when the
 program starts up. Parameter definitions can be added or removed from the options
 file as required. An option is specified using a two letter mnemonic followed by
 its value. If a copy of this file is not present in the default directory, or the
@@ -344,30 +129,30 @@ parameters have invalid values, then the program will prompt for those parameter
 that it cannot continue without, namely the read-out noise and the gain. This is
 signified by the message:
 
-\begin{verbatim}
-        Value unacceptable --- please re-enter
-\end{verbatim}
+\begin{terminalv}
+Value unacceptable --- please re-enter
+\end{terminalv}
 
 followed by the parameter prompt. The user has to give values for the read-out
 noise and gain before the program will continue. Both parameters are used at
 various stages of processing and the user guide keeps stressing that it is highly
 advisable to have the most accurate values as possible for these parameters.
 Although the program will execute with guesstimates for these, the results should
-be treated with caution. The sections on the {\bf PEAK} and {\bf NSTAR} commands in
+be treated with caution. The sections on the \textbf{PEAK} and \textbf{NSTAR} commands in
 the user guide suggest a method of checking the validity of the values given.
 
-The file {\tt photo.opt} contains the list of aperture radii used by DAOPHOT when
+The file \texttt{photo.opt} contains the list of aperture radii used by DAOPHOT when
 performing aperture photometry.
 
 An alternative to the iterative profile fitting routine NSTAR in DAOPHOT has been
 written by Peter Stetson and is called ALLSTAR. It is described in the user manual
 and can be executed by typing:
 
-\begin{verbatim}
-        % allstar
-\end{verbatim}
+\begin{terminalv}
+% allstar
+\end{terminalv}
 
-The file {\tt allstar.opt} contains parameters for this program.
+The file \texttt{allstar.opt} contains parameters for this program.
 
 \section{\xlabel{DAOGREY}DAOGREY -- Display an image}
 \label{sec:daogrey}
@@ -381,9 +166,9 @@ DAOGREY is the first of these routines and this will display the image data on a
 suitable device.
 It is executed by typing:
 
-\begin{verbatim}
-        % daogrey
-\end{verbatim}
+\begin{terminalv}
+% daogrey
+\end{terminalv}
 
 The following parameters are requested:
 
@@ -422,16 +207,16 @@ area.
 
 DAOPLOT will take a file produced by DAOPHOT and overlay the positions of objects
 in the file on top of the grey image produced by DAOGREY. The positions are
-indicated by a green cross. The file can be any of the types {\tt .coo}, {\tt .ap},
-{\tt .grp} or {\tt .nst} produced by DAOPHOT. If the file is not suitable then
+indicated by a green cross. The file can be any of the types \texttt{.coo}, \texttt{.ap},
+\texttt{.grp} or \texttt{.nst} produced by DAOPHOT. If the file is not suitable then
 error messages will be given and the routine will end. If the filename was entered
 wrongly, then just run the task again.
 
 To run DAOPLOT simply type:
 
-\begin{verbatim}
-        % daoplot
-\end{verbatim}
+\begin{terminalv}
+% daoplot
+\end{terminalv}
 
 The following parameter is requested:
 
@@ -454,9 +239,9 @@ mouse. The break key ends the cursor session. Positions are written to the termi
 as well as a file.
 
 To run DAOCURS type:
-\begin{verbatim}
-        % daocurs
-\end{verbatim}
+\begin{terminalv}
+% daocurs
+\end{terminalv}
 
 The following parameter is requested:
 
